[package]
name = "bevy_anim_graph_editor"
version = "0.1.0"
authors = ["Aidan Chelig"]
description = "A Bevy animation graph editor and visualizer built with egui."
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.19.0", default-features = true, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_ui_render",
  "bevy_animation",
  "bevy_text",
  "bevy_asset",
  "bevy_scene",
  "bevy_state",
  "bevy_gltf",
  "multi_threaded",
  "png",
  "webgl2",
  "tonemapping_luts",
  "zstd_rust",
  "x11",
  "wayland",
] }

clap = { version = "4.5", features = ["derive"] }
ron = "0.12"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Document",
  "Location",
] }


[features]
default = ["dev_native"]
dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]
dev_native = [
  "dev",
  "bevy/file_watcher",
  "bevy/embedded_watcher",
]

[package.metadata.bevy_cli.release]
default-features = false

[package.metadata.bevy_cli.web]
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
